--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PETSHOP DH</title>
-    <link rel="stylesheet" href="../public/stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <a class="logo" href="index.html"><img src="img/logo-white.png" alt="Petshop DH"></a>
+            <a class="logo" href="index.html"><img src="images/logo-white.png" alt="Petshop DH"></a>
 
             <nav>
                 <ul>
@@ -26,11 +26,13 @@
     </header>
     <main>
         <!-- aqui vem o cadastro -->
+
+        <h1>não tá facil</h1>
     </main>
     <footer>
         <div class="container">
             <div class="logo-icon">
-                <img src="img/icon-black.png" alt="Icone Petshop DH">
+                <img src="images/icon-black.png" alt="Icone Petshop DH">
             </div>
             <div class="info">
                 <p><a href="mailto:contato@petshopdh.com.br">contato@petshopdh.com.br</a> <br>
