--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,30 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PETSHOP DH</title>
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <a class="logo" href="index.html"><img src="images/logo-white.png" alt="Petshop DH"></a>
-        <nav>
-            <ul>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-        </div>
-    </header>
+    <%- include('./partials/header.ejs') %> 
     <main>
-        <p><%=JSON.stringify(servicos)%></p>
+        <!-- <p><%=JSON.stringify(servicos)%></p> -->
         <section class="banner">
             <div class="container">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
                 <img src="images/ilustra-park.png" alt="ilustração de pessoa passeando com o cachorro na praça">
             </div>
+        </section>
+        <section>
+            <form action="/cadastro" method="post">
+                <label for="nome">Nome Serviço</label>
+                <input type="text" name="nome" id="nome" required>
+                <label for="valor">Valor</label>
+                <input type="number" name="valor" id="valor" required>
+                <label for="imagem">Nome Serviço</label>
+                <input type="file" name="imagemServico" id="imagemServico" required>
+                <button type="submit" class="btn btn-primary"start>Enviar</button>
+            </form>
         </section>
         <section class="servicos">
             <div class="container">
@@ -63,28 +62,7 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="container">
-            <div class="logo-icon">
-                <img src="images/icon-black.png" alt="Icone Petshop DH">
-            </div>
-            <div class="info">
-                <p><a href="mailto:contato@petshopdh.com.br">contato@petshopdh.com.br</a> <br>
-                    <a href="tel:+5511984848484">(11) 98484-8484 (whatsapp)</a></p>
-
-                <p>
-                    AVENIDA PAULISTA, 4242 <br>
-                    BAIRRO CONSOLAÇÃO <br>
-                    SÃO PAULO- SP
-                </p>
-            </div>
-            <div class="mapa">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14631.954336743434!2d-46.7724023!3d-23.532913!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x739f0ddb0439cf94!2sDigital%20House%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1621457988095!5m2!1spt-BR!2sbr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
-    </footer>
+    <%- include('./partials/footer.ejs') %> 
 </body>
 
 </html>
