--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <section class="banner">
             <div class="container">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                <img src="images/ilustra-park.png" alt="ilustração de pessoa passeando com o cachorro na praça">
+                <img src="../images/ilustra-park.png" alt="ilustração de pessoa passeando com o cachorro na praça">
             </div>
         </section>
         <section>
@@ -47,7 +47,7 @@
         </section>
         <section class="sobre">
             <div class="container">
-                <img src="images/ilustra-city.png" alt="Ilustração de pessoa passeando com um cachorro na cidade">
+                <img src="../images/ilustra-city.png" alt="Ilustração de pessoa passeando com um cachorro na cidade">
                 <div class="text">
                     <h3>Sed ut perspiciatis unde iste natus error sit voluptatem accusantium doloremque laudantium,
                     </h3>
