--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a class="logo" href="index.html"><img src="images/logo-white.png" alt="Petshop DH"></a>
+        <a class="logo" href="index.html"><img src="/images/logo-white.png" alt="Petshop DH"></a>
     <nav>
         <ul>
             <li><a href="sobre.html">Sobre</a></li>
